Added GenerateToken and changed Login structure
